# sanescan

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  about_dialog.cc  about_dialog.h  image_widget.cc  image_widget.h  main.cc  main_window.cc  main_window.h  main_window.ui  qimage_converter.h  scan_engine.cc  scan_engine.h  scan_settings_widget.cc  scan_settings_widget.h  scan_settings_widget.ui  version.h.in
src/cli/: CMakeLists.txt  main.cc
src/gui/: CMakeLists.txt  about_dialog.h  about_dialog.ui  document_manager.cc  document_manager.h  font_metrics_cache.cc  font_metrics_cache.h  image_widget.cc  image_widget.h  image_widget_highlight_item.cc  image_widget_highlight_item.h  image_widget_ocr_results_manager.cc  image_widget_ocr_results_manager.h  image_widget_selection_item.cc  image_widget_selection_item.h  main.cc  main_window.cc  main_window.h  main_window.ui  ocr_job.cc  ocr_job.h  ocr_settings_widget.cc  ocr_settings_widget.h  ocr_settings_widget.ui  page_manager.cc  page_manager.h  qimage_converter.cc  qimage_converter.h  qimage_utils.cc  qimage_utils.h  scan_document.h  scan_engine.cc  scan_engine.h  scan_page.h  scan_settings_widget.cc  scan_settings_widget.h  scan_settings_widget.ui  scan_type.h
src/gui/pagelist/: page_list_model.cc  page_list_model.h  page_list_view.cc  page_list_view.h  page_list_view_delegate.cc  page_list_view_delegate.h
src/gui/settings/: setting_combo.cc  setting_combo.h  setting_combo.ui  setting_spin.cc  setting_spin.h  setting_spin.ui  setting_spin_float.cc  setting_spin_float.h  setting_spin_float.ui  setting_widget.cc  setting_widget.h
src/lib/: CMakeLists.txt  buffer_manager.cc  buffer_manager.h  file_loader.h  file_loader_image.cc  file_loader_image.h  file_loader_pdf.cc  file_loader_pdf.h  fwd.h  incomplete_line_manager.h  job_queue.cc  job_queue.h  sane_device_wrapper.cc  sane_device_wrapper.h  sane_exception.h  sane_types.cc  sane_types.h  sane_types_conv.cc  sane_types_conv.h  sane_utils.cc  sane_utils.h  sane_wrapper.cc  sane_wrapper.h  scan_area_utils.cc  scan_area_utils.h  scan_image_buffer.cc  scan_image_buffer.h  task_executor.cc  task_executor.h
src/ocr/: CMakeLists.txt  blur_detection.cc  blur_detection.h  fwd.h  hocr.cc  hocr.h  hocr_private.h  line_erasure.cc  line_erasure.h  ocr_baseline.cc  ocr_baseline.h  ocr_box.cc  ocr_box.h  ocr_line.cc  ocr_line.h  ocr_options.h  ocr_paragraph.cc  ocr_paragraph.h  ocr_pipeline_run.cc  ocr_pipeline_run.h  ocr_results.h  ocr_results_evaluator.cc  ocr_results_evaluator.h  ocr_utils.cc  ocr_utils.h  ocr_word.cc  ocr_word.h  pdf.cc  pdf.h  pdf_canvas.h  pdf_ttf_font.h  pdf_writer.cc  pdf_writer.h  tesseract.cc  tesseract.h  tesseract_renderer.cc  tesseract_renderer.h  tesseract_renderer_utils.h
src/util/: enum_flags.h  image.cc  image.h  math.h
test/: CMakeLists.txt  main.cc
test/lib/: CMakeLists.txt  buffer_manager.cc  incomplete_line_manager.cc  test_data_utils.h
test/ocr/: hocr.cc  ocr_utils.cc  tesseract_renderer_utils.cc
